Fixing overlapping divs on Jobs History page

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -380,6 +380,8 @@ div.pagination div.control {
     vertical-align: top;
 }
 
+div.clear { clear:both; }
+
 div.rowsPerPage {
     label {
         padding-right: 5px;
